# SourcePilot

./: .dockerignore  .env.example  .gitignore  .gitmodules  .python-version  CLAUDE.md  README.md  app.py  config.py  docker-compose.yml  mcp_server.py  pyproject.toml  requirements.txt  run.sh  run_mcp.sh  test_mcp_endpoints_simple.sh  zoekt-query-api.service  zoekt_client.py
audit-viewer/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
audit-viewer/audit_viewer/: config.py  db.py  indexing_cli.py  indexing_db.py  ingester.py  main.py  retention.py  schema.sql
audit-viewer/audit_viewer/api/: app.py  deps.py  trace.py
audit-viewer/audit_viewer/indexing_backends/: __init__.py  base.py  dense.py  graph.py  zoekt.py
audit-viewer/frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo
audit-viewer/frontend/src/: App.tsx
audit-viewer/frontend/src/__tests__/: AddRepoModal.test.tsx  DenseTriggerGuard.test.tsx  Repositories.test.tsx
audit-viewer/frontend/src/components/: DenseTriggerGuard.tsx  LogViewer.tsx
audit-viewer/frontend/src/pages/: RepoDetail.tsx  Repositories.tsx  TraceDetail.tsx
audit-viewer/frontend/src/types/: api.ts
audit-viewer/frontend/tests-e2e/: trace_detail.spec.ts
audit-viewer/scripts/: run_audit_viewer.sh
audit-viewer/tests/: conftest.py  test_api.py  test_indexing_api.py  test_indexing_backends.py  test_indexing_cli.py  test_indexing_db.py  test_indexing_e2e.py  test_ingester.py  test_no_heavy_deps.py  test_parser.py  test_retention.py  test_scripts_dry_run.py
sp-cockpit/: .gitignore  Dockerfile  README.md  pyproject.toml
sp-cockpit/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
sp-cockpit/frontend/src/: App.tsx
sp-cockpit/frontend/src/__tests__/: AddRepoModal.test.tsx  App.test.tsx  Dashboard.test.tsx  EventList.test.tsx  LogViewer.test.tsx  ProjectSelector.test.tsx  RepoDetail.test.tsx  Repositories.test.tsx  TraceDetail.test.tsx
sp-cockpit/frontend/src/api/: client.ts  indexing.ts
sp-cockpit/frontend/src/components/: AddRepoModal.tsx  ConfirmDialog.tsx  (+3 more)
sp-cockpit/scripts/: run_sp_cockpit.sh
sp-cockpit/sp_cockpit/: __init__.py  config.py  db.py  indexing_cli.py  indexing_db.py  indexing_schema.sql  ingester.py  main.py  parser.py  retention.py
sp-cockpit/sp_cockpit/api/: __init__.py  app.py  deps.py  events.py  health.py  indexing.py  projects.py  search.py  stats.py
sp-cockpit/sp_cockpit/indexing_backends/: __init__.py  dense.py  graph.py  structural.py  zoekt.py
sp-cockpit/tests/: conftest.py  test_api.py  test_indexing_api.py  test_indexing_backends.py  test_indexing_cli.py  test_indexing_db.py  test_indexing_e2e.py  test_ingester.py  test_no_heavy_deps.py  test_parser.py  test_projects_api.py  test_retention.py  test_scripts_dry_run.py
(+225 files in other folders)
