[project]
name = "aosp-code-search"
version = "0.1.0"
description = "AOSP Code Search workspace — SourcePilot + MCP + Audit Viewer"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
sourcepilot = [
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "starlette>=0.37",
    "neo4j>=5,<6",
    "tree-sitter>=0.21,<0.24",
    "tree-sitter-java",
    "tree-sitter-cpp",
    "tree-sitter-python",
]
mcp = [
    "mcp>=1.0,<2",
    "httpx>=0.27",
    "uvicorn[standard]>=0.27",
    "starlette>=0.37",
    "pydantic>=2.5",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["audit-viewer", "**/node_modules", "**/__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "mcp-server", "scripts/indexing"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
asyncio_mode = "auto"
markers = [
    "unit: 单元测试",
    "integration: 集成测试",
    "e2e: 端到端测试",
    "slow: 执行耗时较长的测试",
]
